--- a/config/_default/config.yaml
+++ b/config/_default/config.yaml
@@ -4,9 +4,9 @@ theme: "starter-hugo-academic"
 # Hugo Documentation: https://gohugo.io/getting-started/configuration/#all-configuration-settings
 # This file is formatted using YAML syntax - learn more at https://learnxinyminutes.com/docs/yaml/
 
-title: Academic # Website name
+title: Data Issues # Website name
 baseurl: 'https://data-issues.netlify.app/' # Website URL
-copyright: '' # Footer text, e.g. '© {year} Me'
+copyright: 'We lit! Thank u to my God!' # Footer text, e.g. '© {year} Me'
 
 ############################
 ## LANGUAGE
