--- a/config/_default/menus.yaml
+++ b/config/_default/menus.yaml
@@ -8,7 +8,7 @@ main:
     url: '#posts'
     weight: 20
   - name: Projects
-    url: '#projects'
+    url: '/projects'
     weight: 30
   - name: Contact
     url: '#contact'
