changing alignment...bc why not.

--- a/config/_default/params.yaml
+++ b/config/_default/params.yaml
@@ -27,7 +27,7 @@ phone: 888 888 88 88
 
 main_menu:
   enable: true
-  align: l
+  align: 2
   show_logo: true
   show_language: false
   show_day_night: true
