--- a/config/_default/menus.yaml
+++ b/config/_default/menus.yaml
@@ -4,8 +4,8 @@
 #   The weight parameter defines the order that the links will appear in.
 
 main:
-  - name: Posts
-    url: '/posts'
+  - name: Blog
+    url: '/blog'
     weight: 10
   - name: Goodies
     url: 'https://www.youtube.com/watch?v=dQw4w9WgXcQ'
