--- a/config/_default/menus.yaml
+++ b/config/_default/menus.yaml
@@ -5,7 +5,7 @@
 
 main:
   - name: Blog
-    url: '/blog'
+    url: '/post'
     weight: 10
   - name: Goodies
     url: 'https://www.youtube.com/watch?v=dQw4w9WgXcQ'
