--- a/config/_default/config.yaml
+++ b/config/_default/config.yaml
@@ -6,7 +6,7 @@ theme: "starter-hugo-academic"
 
 title: Data Issues # Website name
 baseurl: 'https://data-issues.netlify.app/' # Website URL
-copyright: 'John Thomas, {year}, We lit! Thank u to my God!' # Footer text, e.g. '© {year} Me'
+copyright: '© John Thomas, {year}, We lit! Thank u to my God!' # Footer text, e.g. '© {year} Me'
 
 ############################
 ## LANGUAGE
