font changes and centering attempt

--- a/data/fonts/default.toml
+++ b/data/fonts/default.toml
@@ -1,5 +1,5 @@
 # Font style metadata
-name = "datavision_fonts"
+name = "default"
 
 # Optional Google font URL
 google_fonts = "family=Montserrat:wght@400;700&family=Roboto+Mono&family=Roboto:wght@400;700;family=Lato:wght@900;Lato"
