--- a/config/_default/config.yaml
+++ b/config/_default/config.yaml
@@ -4,7 +4,7 @@ theme: "starter-hugo-academic"
 # Hugo Documentation: https://gohugo.io/getting-started/configuration/#all-configuration-settings
 # This file is formatted using YAML syntax - learn more at https://learnxinyminutes.com/docs/yaml/
 
-title: Data Issues # Website name
+title: Data-Vision # Website name
 baseurl: 'https://data-issues.netlify.app/' # Website URL
 copyright: '© John Thomas, {year}' # Footer text, e.g. '© {year} Me'
 
