--- a/config/_default/params.yaml
+++ b/config/_default/params.yaml
@@ -7,7 +7,7 @@
 
 theme: datavision
 day_night: false
-font: datavision_fonts
+font: Rose
 font_size: L
 
 # SEO
@@ -30,8 +30,8 @@ main_menu:
   align: 1
   show_logo: true
   show_language: false
-  show_day_night: true
-  show_search: true
+  show_day_night: false
+  show_search: false
   highlight_active_link: true
 
 # Localization
