--- a/data/fonts/datavision_fonts.toml
+++ b/data/fonts/datavision_fonts.toml
@@ -2,13 +2,13 @@
 name = "datavision_fonts"
 
 # Optional Google font URL
-google_fonts = "family=Cutive+Mono&family=Lora:wght@400;700&family=Roboto:wght@400;700&display=swap"
+google_fonts = "family=Montserrat:wght@400;700&family=Roboto+Mono&family=Roboto:wght@400;700;family=Lato:wght@900;Lato"
 
 # Font families
-heading_font = "Lora"
-body_font = "Roboto"
-nav_font = "Lora"
-mono_font = "Cutive Mono"
+heading_font = "Lato"
+body_font = "Lato"
+nav_font = "Lato"
+mono_font = "Lato"
 
 
 ##Rose theme here because I am unable to customize....
