thank you sidharth for the font fix!

--- a/data/fonts/datavision_fonts.toml
+++ b/data/fonts/datavision_fonts.toml
@@ -2,9 +2,10 @@
 name = "datavision_fonts"
 
 # Optional Google font URL
-google_fonts = "family=Montserrat:wght@400;700&family=Roboto+Mono&family=Roboto:wght@400;700;family=Lato:wght@900;Lato"
+google_fonts = "family=Montserrat:wght@400;700&family=Roboto+Mono&family=Roboto:wght@400;700&family=Lato:wght@900&display=swap"
 
 # Font families
+
 heading_font = "Lato"
 body_font = "Lato"
 nav_font = "Lato"
