--- a/config/_default/menus.yaml
+++ b/config/_default/menus.yaml
@@ -4,12 +4,12 @@
 #   The weight parameter defines the order that the links will appear in.
 
 main:
-  - name: Blog
+  - name: BLOG
     url: '/blog'
     weight: 10
-  - name: Voice Acting
+  - name: VOICE ACTING
     url: '/voice-acting'
     weight: 20
-  - name: About
+  - name: ABOUT
     url: '/about'
     weight: 30
