--- a/data/fonts/datavision_fonts.toml
+++ b/data/fonts/datavision_fonts.toml
@@ -2,13 +2,12 @@
 name = "datavision_fonts"
 
 # Optional Google font URL
-google_fonts = "family=Montserrat:wght@400;700&family=Roboto+Mono&family=Roboto:wght@400;700&family=Lato:wght@900&display=swap"
-
+google_fonts = "family=Archivo+Narrow&family=Fjalla+One&family=Roboto+Condensed:wght@700&family=Sarabun:wght@300&display=swap;Archivo Narrow; Fjalla One; Roboto Condensed; Sarabun"
 # Font families
 
-heading_font = "Lato"
-body_font = "Lato"
-nav_font = "Lato"
-mono_font = "Lato"
+heading_font = "Roboto Condensed"
+body_font = "Sarabun"
+nav_font = "Fjalla One"
+mono_font = "Sarabun"
 
 ##Rose theme here because I am unable to customize....
